# estudos-rust

./: Cargo.toml  database.db  diesel.toml
migrations/2025-06-03-181513_fourth/: down.sql  up.sql
migrations/2025-06-04-150352_initial/: down.sql  up.sql
src/: equation.rs  equation_builder.rs  equation_serializer.rs  main.rs  models.rs  schema.rs  tests.rs
src/equation/: builder.rs  mod.rs  repository.rs  serializer.rs
