[package]
name = "math_time_api"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9.1"
serde = "1.0.219"
diesel = { version = "2.2.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
# build libsqlite3 as part of the build process
# uncomment this line if you run into setup issues
# libsqlite3-sys = { version = "0.30", features = ["bundled"] }
dotenvy = "0.15"

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]